# Crypto-tracker

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: aef2e6d12343_init.py
app/api/: routes.py
app/clients/: deribit.py
app/core/: config.py  logger.py
app/db/: models.py  session.py  sync_session.py
app/repositories/: price_repository.py
app/schemas/: price.py
app/services/: price_service.py
app/tasks/: price_tasks.py
tests/: test_api.py  test_service.py
