[project]
name = "yaroslav"
version = "0.1.0"
description = ""
authors = [
    {name = "Yaroslav",email = "yroslavkumpan@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi (==0.135.1)",
    "uvicorn (==0.42.0)",
    "sqlalchemy (==2.0.48)",
    "asyncpg (==0.31.0)",
    "aiohttp (==3.13.3)",
    "celery (==5.6.2)",
    "redis (==7.3.0)",
    "python-dotenv (==1.2.2)",
    "pydantic (==2.12.5)",
    "psycopg2-binary (==2.9.11)",
    "pydantic-settings (==2.13.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "==9.0.2"
pytest-asyncio = "==1.3.0"
httpx = "==0.28.1"
alembic = "==1.18.4"
